--- a/test.html
+++ b/test.html
@@ -4,16 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homepage.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="stylesheet" href="login.css">
+    <title>Quản lý điểm sinh viên đại học</title>
 </head>
 
 <body>
-    <form id="form">
-        <input type="search" id="query" name="q" placeholder="Search...">
-        <button>Search</button>
-    </form>
-
+    <div class="container" id="Dangnhap">
+        <h1 class="form-title">Đăng nhập</h1>
+        <form method="POST">
+            <div class="input-group">
+                <i class="fas fa-user"></i>
+                <input type="text" name="Masv" id="Masv" placeholder="Mã sinh viên">
+            </div>
+            <div class="input-group">
+                <i class="fa-solid fa-lock"></i>
+                <input type="password" name="password" id="password" placeholder="Mật khẩu">
+                <i id="togglePassword" class="fa-solid fa-eye" onclick="togglePasswordVisibility()"></i>
+            </div>
+            <button type="submit" class="button" name="btnDangnhap" id="btnDangnhap" style="text-decoration: none;">Đăng
+                nhập</button>
+            <p class="recover">
+                <a href="recover.php">Quên mật khẩu?</a>
+            </p>
+        </form>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
